--- a/colors-catppuccin.css
+++ b/colors-catppuccin.css
@@ -75,3 +75,39 @@
 .tab.active[data-tab*="3"] a:hover {
   color: var(--black);
 }
+
+/* Screens larger than a average phone */
+@media screen and (min-width: 800px) {
+  #tab-container {
+    background-color: transparent !important;
+  }
+
+  .tab[data-tab*="1"] {
+    background: var(--blue) !important;
+    color: var(--black) !important;
+    /* FIX FOR CATPPUCCIN THEME */
+  }
+
+  .tab[data-tab*="2"] {
+    background: var(--green) !important;
+    color: var(--black) !important;
+    /* FIX FOR CATPPUCCIN THEME */
+  }
+
+  .tab[data-tab*="3"] {
+    background: var(--yellow) !important;
+    color: var(--black) !important;
+    /* FIX FOR CATPPUCCIN THEME */
+  }
+
+  .tab[data-tab*="4"] {
+    background: var(--red) !important;
+    color: var(--black) !important;
+    /* FIX FOR CATPPUCCIN THEME */
+  }
+
+  .tab[data-tab*="5"] {
+    background: var(--purple) !important;
+    color: var(--black) !important;
+    /* FIX FOR CATPPUCCIN THEME */
+  }
