--- a/colors-dracula.css
+++ b/colors-dracula.css
@@ -17,63 +17,97 @@
   --yellow: #f1fa8c;
 }
 
-
-
 /* Colors */
 
 .tab.active[data-tab^="tab"] {
-    font-weight: 700;
-  }
+  font-weight: 700;
+}
 
-  .tab.active[data-tab*="1"],
-  .content[data-tab*="1"] a:hover,
-  .tab[data-tab*="1"]:hover {
-    background-color: var(--blue);
-    color: var(--white);
-    /* FIX FOR DRACULA-EST THEME */
-  }
-
-  .tab.active[data-tab*="2"],
-  .content[data-tab*="2"] a:hover,
-  .tab[data-tab*="2"]:hover {
-    background-color: var(--green);
-    color: var(--black);
-    /* FIX FOR DRACULA-EST THEME */
-  }
-
-  .tab.active[data-tab*="3"],
-  .content[data-tab*="3"] a:hover,
-  .tab[data-tab*="3"]:hover {
-    background-color: var(--yellow);
-    color: var(--black);
-    /* FIX FOR DRACULA-EST THEME */
-  }
-
-  .tab.active[data-tab*="4"],
-  .content[data-tab*="4"] a:hover,
-  .tab[data-tab*="4"]:hover {
-    background-color: var(--red);
-    color: var(--white);
-    /* FIX FOR DRACULA-EST THEME */
-  }
-
-  .tab.active[data-tab*="5"],
-  .content[data-tab*="5"] a:hover,
-  .tab[data-tab*="5"]:hover {
-    background-color: var(--purple);
-    color: var(--black);
-    /* FIX FOR DRACULA-EST THEME */
-  }
-
+.tab.active[data-tab*="1"],
+.content[data-tab*="1"] a:hover,
+.tab[data-tab*="1"]:hover {
+  background-color: var(--blue);
+  color: var(--white);
   /* FIX FOR DRACULA-EST THEME */
-  .tab.active[data-tab*="1"] a:hover {
-    color: var(--black);
+}
+
+.tab.active[data-tab*="2"],
+.content[data-tab*="2"] a:hover,
+.tab[data-tab*="2"]:hover {
+  background-color: var(--green);
+  color: var(--black);
+  /* FIX FOR DRACULA-EST THEME */
+}
+
+.tab.active[data-tab*="3"],
+.content[data-tab*="3"] a:hover,
+.tab[data-tab*="3"]:hover {
+  background-color: var(--yellow);
+  color: var(--black);
+  /* FIX FOR DRACULA-EST THEME */
+}
+
+.tab.active[data-tab*="4"],
+.content[data-tab*="4"] a:hover,
+.tab[data-tab*="4"]:hover {
+  background-color: var(--red);
+  color: var(--white);
+  /* FIX FOR DRACULA-EST THEME */
+}
+
+.tab.active[data-tab*="5"],
+.content[data-tab*="5"] a:hover,
+.tab[data-tab*="5"]:hover {
+  background-color: var(--purple);
+  color: var(--black);
+  /* FIX FOR DRACULA-EST THEME */
+}
+
+/* FIX FOR DRACULA-EST THEME */
+.tab.active[data-tab*="1"] a:hover {
+  color: var(--black);
+}
+
+.tab.active[data-tab*="2"] a:hover {
+  color: var(--black);
+}
+
+.tab.active[data-tab*="3"] a:hover {
+  color: var(--black);
+}
+
+/* Screens larger than a average phone */
+@media screen and (min-width: 800px) {
+  #tab-container {
+    background-color: transparent !important;
   }
 
-  .tab.active[data-tab*="2"] a:hover {
-    color: var(--black);
+  .tab[data-tab*="1"] {
+    background: var(--blue) !important;
+    color: var(--white) !important;
+    /* FIX FOR DRACULA-EST THEME */
   }
 
-  .tab.active[data-tab*="3"] a:hover {
-    color: var(--black);
+  .tab[data-tab*="2"] {
+    background: var(--green) !important;
+    color: var(--black) !important;
+    /* FIX FOR DRACULA-EST THEME */
+  }
+
+  .tab[data-tab*="3"] {
+    background: var(--yellow) !important;
+    color: var(--black) !important;
+    /* FIX FOR DRACULA-EST THEME */
+  }
+
+  .tab[data-tab*="4"] {
+    background: var(--red) !important;
+    color: var(--white) !important;
+    /* FIX FOR DRACULA-EST THEME */
+  }
+
+  .tab[data-tab*="5"] {
+    background: var(--purple) !important;
+    color: var(--black) !important;
+    /* FIX FOR DRACULA-EST THEME */
   }
