--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ h1#main_header {
 #weather {
   display: block;
   position: absolute;
-  top: 50px;
+  top: 90px;
   width: 46px;
 }
 
@@ -141,10 +141,11 @@ h1#main_header {
   font-size: 0.4em;
   font-weight: 300;
   display: inline-block;
-  position: relative;
+  /*position: relative;*/
   width: 46px;
   height: 46px;
   text-align: center;
+  margin-left: -10px;
 }
 
 .fade-in-weather {
@@ -163,7 +164,9 @@ h1#main_header {
   animation: cursor-blink 0.6s infinite ease;
   -webkit-animation: cursor-blink 0.6s infinite ease;
   /*cursor: pointer;*/
-  padding: 0 0em 0 0.15em;
+  padding: 0 0 0 0.15em;
+  margin-top: 20px;
+  display: inline-block;
 }
 
 /* Vertical scroll box */
