--- a/styles.css
+++ b/styles.css
@@ -222,9 +222,10 @@ h1#main_header {
   --favicon-bing: url("asset/icons/favicon-bing.svg");
   --favicon-duckduckgo: url("asset/icons/favicon-duckduckgo.svg");
   --favicon-google: url("asset/icons/favicon-google.svg");
+  --favicon-presearch: url("asset/icons/favicon-presearch.svg");
   --favicon-yahoo: url("asset/icons/favicon-yahoo.svg");
   --favicon-yandex: url("asset/icons/favicon-yandex.svg");
-  --faviconSearch: var(--favicon-duckduckgo);
+  --faviconSearch: var(--favicon-presearch);
   /*filter: invert(0.4);*/
 }
 
