--- a/styles.css
+++ b/styles.css
@@ -365,23 +365,33 @@ button#clear-field img {
 }
 
 .content[data-tab*="1"] {
-  border: 1px solid var(--blue);
+  border-width: 4px 10px 10px 4px;
+  border-style: solid;
+  border-color: var(--blue);
 }
 
 .content[data-tab*="2"] {
-  border: 1px solid var(--green);
+  border-width: 4px 10px 10px 4px;
+  border-style: solid;
+  border-color: var(--green);
 }
 
 .content[data-tab*="3"] {
-  border: 1px solid var(--yellow);
+  border-width: 4px 10px 10px 4px;
+  border-style: solid;
+  border-color: var(--yellow);
 }
 
 .content[data-tab*="4"] {
-  border: 1px solid var(--red);
+  border-width: 4px 10px 10px 4px;
+  border-style: solid;
+  border-color: var(--red);
 }
 
 .content[data-tab*="5"] {
-  border: 1px solid var(--purple);
+  border-width: 4px 10px 10px 4px;
+  border-style: solid;
+  border-color: var(--purple);
 }
 
 .content {
