--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,14 @@ Author: MrAlpha786 (github.con/MrAlpha786) */
   font-family: "IBM Plex Mono";
   src: url("asset/fonts/IBM Plex Mono/IBMPlexMono-Light.woff2") format("woff2");
   font-style: normal;
-  font-weight: light;
+  font-weight: 300;
 }
 
 @font-face {
   font-family: "IBM Plex Mono";
   src: url("asset/fonts/IBM Plex Mono/IBMPlexMono-LightItalic.woff2") format("woff2");
   font-style: italic;
-  font-weight: light;
+  font-weight: 300;
 }
 
 @font-face {
