--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 /* colors-dracula.css
 /* colors-catppuccin.css
 */
-@import url(colors-dracula.css);
+@import url(colors-catppuccin.css);
 
 /* GetStarted - A simple responsive Startpage
 Author: MrAlpha786 (github.con/MrAlpha786) */
